# optimization_training

./: CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile  cppDocs.rst
docs/problems/: Knapsack_problem.rst  index.rst  problem_template.rst
include/metaheuristics/: AbstractMetaHeuristics.h
include/problem/: KnapsackProblem.h  ProblemsAbstract.h
src/: CMakeLists.txt
src/metaheuristics/: AbstractMetaHeuristics.cpp
src/problem/: KnapsackProblem.cpp  ProblemsAbstract.cpp
test/: CMakeLists.txt
test/problem/: TestKnapsackProblem.cpp
